<resources>
    <string name="app_name">crypto-watcher-android</string>
    <string name="app_title">Crypto Watcher</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_address">Invalid address</string>
    <string name="ok">OK</string>
    <string name="type_here">Type here…</string>
    <string name="add_an_evm_wallet">Add an EVM wallet</string>
    <string name="add_a_wax_wallet">Add a Wax wallet</string>
    <string name="add_all_test_accounts">Add all test accounts</string>
    <string name="clear_all">Clear all</string>
    <string name="toggle_fab">Toggle FAB</string>
    <string name="delete_prompt">Are you sure you want to remove this wallet?</string>
    <string name="confirm">Confirm</string>
    <string name="data_error">Data error</string>
    <string name="network_error">Network error</string>
    <string name="chain_name_eth">ETH</string>
    <string name="chain_name_wax">WAX</string>
    <string name="chain_id_eth">ethereum</string>
    <string name="chain_id_wax">wax</string>
    <string name="loading">Loading…</string>
</resources>